# ask_anything

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  stylelint.config.cjs  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
docs/: architecture.md  audit_report.md  classification_strategy.md  operations.md  qa_quality_analysis.md  qa_recall_analysis.md  vision.md
scripts/: 1_scan_ia_metadata.py  2_classify_candidates.py  3_download_lowres.py  3b_transcode_web.py  4_transcribe_videos.py  5_extract_qa_prototype.py  5a_classify_event.py  5b_extract_qa.py  5b_extract_qa_perseg.py  5c_build_qa_text.py  6_build_search_index.py  _cleanup_translated_transcripts.py  _fix_hallucinations.py  build_iss_crew_names.py  fetch_video_dates.py  run_pipeline.py  test_search.py
scripts/astro_ia_harvest/: __init__.py  config.py  download_utils.py  ia_api.py  iss_crew_names.json  iss_topic_filter.py  jsonl_utils.py  ollama_client.py  qa_utils.py  transcript_utils.py
src/: App.module.css  App.tsx  vite-env.d.ts
src/components/: CommonQuestions.module.css  CommonQuestions.tsx  ConnectorSvg.module.css  ConnectorSvg.tsx  NasaLogo.tsx  PlayerPlaceholder.module.css  PlayerPlaceholder.tsx  QuestionsTimeline.module.css  QuestionsTimeline.tsx  ResultsList.module.css  ResultsList.tsx  SearchInput.module.css  SearchInput.tsx  StatusBar.tsx  ThemeToggle.module.css  ThemeToggle.tsx  VideoPlayer.module.css  VideoPlayer.tsx  VideoQuestionsList.module.css  VideoQuestionsList.tsx
src/lib/: searchEngine.ts  (+1 more)
(+6 files in other folders)
