[project]
name = "ask-anything"
version = "0.1.0"
description = "Internet Archive astronaut interview and Q&A video harvester"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "whisperx>=3.7.0,<3.8.0",
  "pyannote-audio>=3.3.0,<3.4.0",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "python-dotenv>=1.0.0",
  "matplotlib>=3.10.8",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
